# coral-3dlab

./: .gitignore  CMakeLists.txt  DEVGUIDE.md  README.md  _GENERATE_VS2010_64.bat
dependencies/: CMakeLists.txt  build.cmake
modules/lab3d/: App.csl  App.lua  Application.csl  Application.lua  IApplication.csl  Main.lua  SceneManager.lua  StartupServices.lua  Viewer.lua  __init.lua
modules/lab3d/app/: Application.csl  Application.lua  IApplication.csl  IApplicationContext.csl  Main.lua  StartupServices.lua
modules/lab3d/app/manipulator/: ExamineManipulator.csl  ExamineManipulator.lua  FlyManipulator.csl  FlyManipulator.lua  IManipulator.csl  IManipulatorManager.csl  ManipulatorManager.csl  ManipulatorManager.lua
modules/lab3d/app/ui/: GLCanvasWidget.lua  MainWindow.lua  MainWindow.ui
modules/lab3d/core/: Application.csl  Application.lua  IApplication.csl
modules/lab3d/core/domain/: CaModel_Project.lua  Entity.csl  Entity.lua  ExamineNavigator.csl  ExamineNavigator.lua  FlyNavigator.csl  FlyNavigator.lua  IEntity.csl  IExamineNavigator.csl  IFlyNavigator.csl  IProjectObserver.csl  Pose.csl  Project.csl  Project.lua  ProjectObserver.csl  ProjectObserver.lua  View.csl  View.lua
modules/lab3d/core/helper/: CalciumHelper.lua  ObserveFields.lua
modules/lab3d/core/scene/: Actor.csl  Actor.lua  ActorFactory.csl  ActorFactory.lua  Camera.csl  Camera.lua  IActor.csl  IActorFactory.csl  ICamera.csl  IModelLoader.csl  IScene.csl
modules/lab3d/dom/: BoundingBox.csl  CaModel_Project.lua  CaModel_Workspace.lua  Camera.csl  Entity.csl  Entity.lua  ExamineNavigator.csl  ExamineNavigator.lua  FlyNavigator.csl  FlyNavigator.lua  ICamera.csl  IDecoratable.csl  IEntity.csl  IEntityObserver.csl  IFlyNavigator.csl  INavigator.csl  IProject.csl  IUpdateCallback.csl  IUpdateManager.csl  IView.csl  IWorkspace.csl  Pose.csl  Project.csl  Project.lua  ProjectObserver.csl  ProjectObserver.lua  UpdateManager.csl  UpdateNotifier.csl  UpdateNotifier.lua  View.csl  View.lua  Workspace.csl
modules/lab3d/helper/: EntityObserver.csl  EntityObserver.lua  ObserveFields.lua  ProjectObserver.csl  ProjectObserver.lua  ServiceObserver.csl  UpdateNotifier.csl  UpdateNotifier.lua
modules/lab3d/manipulator/: ExamineManipulator.csl  ExamineManipulator.lua  FlyManipulator.csl  FlyManipulator.lua  IManipulator.csl  IManipulatorManager.csl  ManipulatorManager.csl  ManipulatorManager.lua  SelectionManipulator.csl  SelectionManipulator.lua
modules/lab3d/multiscale/: MultiScaleManager.lua
modules/lab3d/scene/: Actor.csl  Actor.lua  ActorFactory.csl  ActorFactory.lua  Camera.csl  Camera.lua  ExamineNavigator.csl  ExamineNavigator.lua  FlyNavigator.csl  FlyNavigator.lua  HighlightModel.csl  IActor.csl  IActorFactory.csl  ICamera.csl  IDrawer.csl  IExamineNavigator.csl  IManipulator.csl  IModel.csl  INavigator.csl  IPickIntersector.csl  IScene.csl  ITransformModel.csl  Model.csl  ModelLoader.csl  PickIntersection.csl  Scene.csl  SceneManager.csl  SceneManager.lua  TransformModel.csl  TransformModel.lua  __init.lua
modules/lab3d/ui/: Console.ui  LuaConsole.ui  LuaConsoleControl.lua  LuaConsoleWidget.lua  MainWindow.lua  MainWindow.ui  ObjectTreeModel.lua  ObjectTreeWidget.lua  QtGlue.csl  __init.lua
modules/lab3d/ui/extensions/: Examine.lua  Fly.lua  Selection.lua
modules/lab3d/viewer/: Main.lua  SceneManager.lua  StartupServices.lua  Viewer.lua
modules/lab3d/viewer/manipulator/: ExamineManipulator.csl  ExamineManipulator.lua  FlyManipulator.csl  FlyManipulator.lua  IManipulatorManager.csl  ManipulatorManager.csl  ManipulatorManager.lua
modules/lab3d/viewer/ui/: GLCanvasWidget.lua  MainWindow.lua  MainWindow.ui
modules/minDistanceQuery/: GLMinDistanceQuery.csl  IMinDistanceQuery.csl
src/: CMakeLists.txt  coral.properties
src/lab3d/: CMakeLists.txt
src/lab3d.dom/: CMakeLists.txt  Camera.cpp  Entity.cpp  Project.cpp  View.cpp  Workspace.cpp
src/lab3d.manipulator/: CMakeLists.txt
src/lab3d.scene/: CMakeLists.txt  GraphicsContext.cpp  GraphicsContext.h  HighlightModel.cpp  Model.cpp  OSGUserData.cpp  OSGUserData.h  Scene.cpp  Scene.h  TransformModel.cpp
src/lab3d.ui/: CMakeLists.txt  QtGlue.cpp
src/lab3d/app/: CMakeLists.txt
src/lab3d/app/manipulator/: CMakeLists.txt
src/lab3d/app/ui/: CMakeLists.txt
src/lab3d/core/: CMakeLists.txt
src/lab3d/core/domain/: CMakeLists.txt
src/lab3d/core/scene/: CMakeLists.txt  GraphicsContext.h  ModelLoader.cpp  Scene.cpp  Scene.h  glmOsgConvert.h
src/lab3d/dom/: CMakeLists.txt  UpdateManager.cpp
src/lab3d/manipulator/: CMakeLists.txt
src/lab3d/scene/: CMakeLists.txt  HighlightModel.cpp  Model.cpp  ModelLoader.cpp  OSGUserData.cpp  Scene.cpp  Scene.h  TransformModel.cpp  eigenOsgConvert.h
src/lab3d/viewer/: CMakeLists.txt
src/lab3d/viewer/manipulator/: CMakeLists.txt
src/lab3d/viewer/ui/: CMakeLists.txt
src/minDistanceQuery/: CMakeLists.txt  GLFBObject.cpp  GLFBObject.h  GLMinDistanceQuery.cpp  GLSLShader.cpp  GLSLShader.h  GL_portable.h  glew_portable.h
